<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_above="@+id/input_edit"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_gravity="left"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo8" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/input_edit"
            android:layout_above="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:textColorHint="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ffffffff" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ffffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#dd489cfa"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/register_txt1"
            android:textColor="#ffffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/color_theme"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>