<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_bg_color"
    android:orientation="vertical">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_myinfo" />

        <TextView
            android:id="@+id/tv_set_name"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/base_color_text_gray2" />
    
    <RelativeLayout
        android:id="@+id/layout_blacklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_blacklist" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/base_color_text_gray" />

    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_notify" />


        <com.suke.widget.SwitchButton
            android:id="@+id/iv_notification"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            app:sb_checked_color="#fdc951"
            app:sb_checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/base_color_text_gray" />

    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_voice" />

        <com.suke.widget.SwitchButton
            android:id="@+id/iv_voice"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            app:sb_checked_color="#fdc951"
            app:sb_checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/base_color_text_gray" />

    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dip" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_vibrate" />


        <com.suke.widget.SwitchButton
            android:id="@+id/iv_vibrate"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            app:sb_checked_color="#fdc951"
            app:sb_checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/base_color_text_gray" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Smile.Button.logout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout" />

</LinearLayout>