<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <Button
        android:id="@+id/registr_in_back"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/title_back_button_gray"
        android:layout_width="50dp"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/register_account_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/base_color_text_black"
        android:textSize="40sp"
        android:layout_marginLeft="@dimen/register_margin_rl"
        android:layout_marginTop="18dp"
        android:text="设置账户与密码" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text_gray"
        android:textSize="15sp"
        android:layout_marginLeft="@dimen/register_margin_rl"
        android:layout_marginTop="@dimen/register_margin"
        android:text="密码由数字、字母或符号组成，长度没有限制" />

    <LinearLayout style="@style/Register_Input" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_gray"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="账    号    " />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/register_edit_margin"
            android:background="@color/wight"
            android:hint="@string/login_username_hint"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/register_view_margin"
        android:layout_marginRight="@dimen/register_view_margin"
        android:background="#9fa0a0" />

    <LinearLayout style="@style/Register_Input" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_gray"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="密    码    " />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/register_edit_margin"
            android:background="@color/wight"
            android:hint="@string/login_password_hint"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/register_view_margin"
        android:layout_marginRight="@dimen/register_view_margin"
        android:background="#9fa0a0" />

    <LinearLayout style="@style/Register_Input">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:textColor="@color/color_text_gray"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/register_edit_margin"
            android:background="@color/wight"
            android:hint="@string/login_email_hint"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/register_view_margin"
        android:layout_marginRight="@dimen/register_view_margin"
        android:background="#9fa0a0" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/register_view_margin"
        android:layout_marginRight="@dimen/register_view_margin"
        android:background="@drawable/btn_login_selector"
        android:text="注册"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>