<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_bottom_bg"
                android:drawableTop="@drawable/tab_message_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="5dip"
                android:paddingTop="4dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_recent"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="@dimen/main_bottom_text_size" />

            <TextView
                android:id="@+id/iv_recent_tips"
                android:layout_width="wrap_content"
                android:minWidth="20dip"
                android:layout_height="20dip"
                android:paddingLeft="@dimen/dot_text_padding"
                android:paddingRight="@dimen/dot_text_padding"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:background="@drawable/circle"
                android:gravity="center"
                android:textColor="#ffffffff"
                android:textSize="@dimen/unread_text_size"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_contract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_bottom_bg"
                android:drawableTop="@drawable/tab_contact_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="5dip"
                android:paddingTop="4dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_contact"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="@dimen/main_bottom_text_size" />


            <TextView
                android:id="@+id/iv_contact_tips"
                android:layout_width="wrap_content"
                android:minWidth="20dip"
                android:layout_height="20dip"
                android:paddingLeft="@dimen/dot_text_padding"
                android:paddingRight="@dimen/dot_text_padding"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="1"
                android:textColor="#ffffffff"
                android:textSize="@dimen/unread_text_size"
                android:visibility="visible" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_bottom_bg"
            android:drawableTop="@drawable/tab_set_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="5dip"
            android:paddingTop="4dip"
            android:scaleType="matrix"
            android:text="@string/mian_tab_set"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="@dimen/main_bottom_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

    <View
    android:layout_width="match_parent"
    android:layout_height="0.1dp"
    android:layout_above="@+id/main_bottom"
    android:background="@color/base_color_text_gray" />
</RelativeLayout>
